2009-01-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/abs.c: Allow to run if CYGPKG_LIBC_STARTUP isn't there.
	* tests/atoi.c: Ditto.
	* tests/atol.c: Ditto.
	* tests/bsearch.c: Ditto.
	* tests/div.c: Ditto.
	* tests/getenv.c: Ditto.
	* tests/labs.c: Ditto.
	* tests/ldiv.c: Ditto.
	* tests/qsort.c: Ditto.
	* tests/rand1.c: Ditto.
	* tests/rand2.c: Ditto.
	* tests/rand3.c: Ditto.
	* tests/rand4.c: Ditto.
	* tests/srand.c: Ditto.
	* tests/strtol.c: Ditto.
	* tests/strtoul.c: Ditto.

2008-12-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/strtoull.cxx, src/strtoll.cxx, src/strtoul.cxx, src/strtoul.cxx:
	lisp'ify to avoid compiler warnings.

2005-12-27  Sergei Organov  <osv@javad.com>

	* src/strtod.cxx (Ise): 'd' and 'D' aren't allowed in floating
	formats.

2004-08-18  Fredrik Hederstierna  <fredrik@wespot.com>
2004-08-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/strtoll.cxx, src/strtoull.cxx: New files. Support for long long
	string conversion.
	* cdl/stdlib.cdl (CYGFUN_LIBC_STDLIB_CONV_LONGLONG): New option
	to build above new files configurably.
	* include/atox.inl: Prototype new functions from above. Add atoll()
	inline.

2004-02-17  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/rand.cxx (srand): Use correct thread data type.
	(rand): Ditto.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/stdlib.cdl: Fix doc link.

2001-06-28  Jesper Skov  <jskov@redhat.com>

	* tests/atoi.c (main): Fix warning.

2001-06-18  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/stdlib.cdl: requires string functions, so say so.

2001-02-14  Jonathan Larmour  <jlarmour@redhat.com>

	* src/rand.cxx: Fix typo

2000-08-03  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* src/getenv.cxx: Revert nickg's change of 2000-06-07. environ is
	meant to be determined by the startup environment (normally in
	CYGPKG_LIBC_STARTUP), not getenv.

2000-07-27  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* cdl/stdlib.cdl: Require CYGINT_ISO_CTYPE because we need the iswhite()